# CMakeTemplate

./: CMakeLists.txt  CMakePresets.json
